# detecting-goal-misgeneralisation

./: .gitignore  .gitmodules  Makefile  environment.yaml  experiment.ipynb  hooks.py  interp.ipynb  main.py  metamodels.ipynb  pyproject.toml  requirements.txt  sweep.py  three_goals.ipynb  three_goals.py  train.py  transformer.py
metamodels/: eigenvalues.ipynb  interp.ipynb  metamodels.ipynb  tasks.py  utils.py
src/: __init__.py  architectures.py  baselines.py  coinrun.ipynb  environments.py  model_split.ipynb  sweep.py  three_goals.ipynb  train.py  utils.py  wrappers.py
src/metamodels/: metamodels.ipynb
src/old_stuff/: experiment.ipynb  old_stuff.py  sweep.py  train.py  transformer.py
